--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -94,14 +94,15 @@ footer ul {
     list-style-type: none;
 }
 footer ul li a img {
-    width: 3rem;
-    height: 3rem;
+    /* width: 3rem; */
+    height: 2rem;
     float: right;
-    margin-right: 3.5rem;
+    /* margin-right: 3.5rem; */
+    margin-left: 2rem;
 }
 footer p {
-    margin-left: 3.5rem;
-    float: left;
+    /* margin-left: 3.5rem; */
+    /* float: left; */
 }
 #footer::after {
     content: "";
